syntax = "proto3";

package majong;

import "common.proto";

// EventID 事件 ID 
enum EventID {
    event_invalid = 0;                  // 无效事件
    event_start_game = 1;               // 开始游戏事件
    event_xipai_finish = 2;             // 洗牌完成事件
    event_fapai_finish = 3;             // 发牌完成事件
    event_huansanzhang_request = 4;     // 换三张请求事件
    event_dingque_request = 5;          // 定缺请求事件
    event_peng_request = 6;             // 碰请求事件
    event_gang_request = 7;             // 杠请求事件
    event_hu_request = 8;               // 胡请求事件
    event_qi_request = 9;               // 弃请求事件
    event_chupai_finish = 10;           // 出牌完成事件
    event_angang_finish = 11;           // 暗杠完成事件
    event_zimo_finish = 12;             // 自摸完成事件
    event_chupai_request = 13;          // 出牌请求事件
    event_gang_finish = 14;             // 杠完成事件
    event_hu_finish = 15;               // 胡完成事件
    event_mopai_finish = 16;            // 摸牌完成事件
    // event_zimo_request = 17;            // 自摸请求事件
    // event_angang_request = 18;          // 暗杠请求事件
    // event_bugang_request = 19;          // 补杠请求事件
    event_bugang_finish = 20;           // 补杠完成事件
    // event_qiangganghu_request = 21;     // 抢杠胡请求事件
    // event_qiqiangganghu_request = 22;   // 放弃抢杠胡请求事件
    event_qiangganghu_finish = 23;      // 抢杠胡完成事件
    event_wenxun_overtime = 24;         // 问询超时事件
    event_peng_finish = 25;             // 碰完成事件
    event_timer = 26;                   // 定时事件

    event_huansanzhang_finish = 27;     // 换三张完成事件
    event_cartoon_finish_request = 28;  // 动画完成请求事件

    event_settle_finish = 29;           // 结算完成事件
}

// RequestEventHead 请求事件通用头
message RequestEventHead {
    uint64 player_id = 1;   // 请求者 ID 
}

// StartGameEvent 开始游戏事件
message StartGameEvent {}

// XipaiFinishEvent 洗牌完成事件
message XipaiFinishEvent {}

// FapaiFinishEvent 发牌完成事件
message FapaiFinishEvent {}

// HuansanzhangRequestEvent 换三张请求事件
message HuansanzhangRequestEvent {
    RequestEventHead head = 1;  // 请求头
    repeated Card cards = 2;    // 换三张牌型
    bool sure = 3;     // 是否确认 
}

// DingqueRequestEvent 定缺请求事件
message DingqueRequestEvent {
    RequestEventHead head = 1;  // 请求头
    CardColor color = 3;        // 定缺颜色
}

// BugangRequestEvent 补杠请求事件
message BugangRequestEvent{
     RequestEventHead head = 1;  // 请求头
     Card cards = 2;    // 补杠的牌
}


// ChupaiRequestEvent 出牌请求事件
message ChupaiRequestEvent{
     RequestEventHead head = 1;  // 请求头
     Card cards = 2;    // 出的牌
}


// PengRequestEvent 碰请求事件
message PengRequestEvent {
    RequestEventHead head = 1;  // 请求头
}

// GangRequestEvent 明杠请求事件
message GangRequestEvent {
    RequestEventHead head = 1;  // 请求头
    Card card = 2; // 要杠的牌
}

// HuRequestEvent 胡请求事件
message HuRequestEvent {
    RequestEventHead head = 1;  // 请求头    
}

// QiRequestEvent 弃请求事件
message QiRequestEvent {
    RequestEventHead head = 1; // 请求头
}

// CartoonFinishRequestEvent 动画完成时间
message CartoonFinishRequestEvent {
    int32 cartoon_type = 1; // 动画类型 ，参考 client_pb.CartoonType
}

// SettleFinishEvent 结算完成事件
message SettleFinishEvent {
    repeated uint64 player_id = 1; // 认输玩家ID
}